--- a/public/posts/api-authorization-design.mdx
+++ b/public/posts/api-authorization-design.mdx
@@ -196,7 +196,7 @@ private isUserAuthorizedForCompany(company: Company): boolean {
 
 ### Where Are We?
 
-I explained some standard OAuth security behaviours and some manageability concerns when you implement API authorization. You should design least-privilege and stable access tokens. You should also ensure a productive and setup for implementing API authorization code, so that you can easily evolve authorization logic in future, as rules change.
+I explained some standard OAuth security behaviours and some manageability concerns when you implement API authorization. You should design least-privilege and stable access tokens. You should also ensure a productive setup for implementing API authorization code, so that you can easily evolve authorization logic in future, as rules change.
 
 ### Next
 
