--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -34,7 +34,7 @@ If an app has XSS vulnerabilities, then an attacker may be able to access secure
 
 ### Best Login Usability
 
-OpenID Connect can provide multiple ways for users to sign in to an SPA, and this can include options that are both user friendly and secure. In addition, an SPA should be in full control of its usability behaviour:
+The authorization server can provide multiple ways for users to sign in to an SPA, and this can include options that are both user friendly and secure. In addition, an SPA should be in full control of its usability behaviour:
 
 - Session Behaviour: the UI should be in control of navigation and expiry events rather than being abruptly redirected.
 - Multi-Tab Browsing: the user should be able to use multiple browser tabs for the same application.
