--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -61,7 +61,7 @@ Portability is often overlooked, but it is common to want to keep your options o
 
 | Aspect | Description |
 | ------ | ----------- |
-| Portable Apps | Implement OpenID Connect in the SPA in a standard way rather than being locked into one authorization server. |
+| Portable Apps | Implement a standards based OAuth flow in the SPA rather than being locked into one authorization server. |
 | Portable Hosting | You should only need to upload web static content to a CDN to deploy SPAs, so avoid designs that prevent this. |
 
 ### This Blog's SPA Code Samples
