--- a/public/posts/log-aggregation-setup.mdx
+++ b/public/posts/log-aggregation-setup.mdx
@@ -66,7 +66,7 @@ The repo includes a Docker Compose deployment, that includes the main Elasticsea
 
 ```yaml
 elasticsearch:
-  image: docker.elastic.co/elasticsearch/elasticsearch:8.17.0
+  image: docker.elastic.co/elasticsearch/elasticsearch:9.0.3
   hostname: elasticsearch-internal
   environment:
     discovery.type: 'single-node'
@@ -167,7 +167,7 @@ The Kibana system connects to Elasticsearch as the [kibana_system](https://www.e
 
 ```yaml
 kibana:
-  image: docker.elastic.co/kibana/kibana:8.17.0
+  image: docker.elastic.co/kibana/kibana:9.0.3
   hostname: kibana-internal
   ports:
     - 5601:5601
@@ -189,7 +189,7 @@ Filebeat uses the following deployment settings, where an API log folder is shar
 
 ```yaml
 filebeat:
-  image: docker.elastic.co/beats/filebeat:8.17.0
+  image: docker.elastic.co/beats/filebeat:9.0.3
   command: filebeat -e -strict.perms=false
   hostname: filebeat-internal
   volumes:
@@ -204,12 +204,15 @@ The main Filebeat configuration is in a *filebeat.yml* file, whose inputs can ex
 
 ```yaml
 filebeat.inputs:
-- type: log
+- type: filestream
+  enabled: true
+  id: apilogs
   paths:
-  - /var/log/api/*.log
-  json:
-    keys_under_root: true
-    add_error_key: false
+  - /var/log/api/api-*.log
+  parsers:
+  - ndjson:
+      keys_under_root: true
+      add_error_key: false
 
 output.elasticsearch:
   hosts: ['http://elasticsearch-internal:9200']
