--- a/public/posts/effective-api-logging.mdx
+++ b/public/posts/effective-api-logging.mdx
@@ -170,7 +170,7 @@ Logging frameworks typically implement JSON logging by first adding their own fi
 
 ### JSON Output
 
-When using pretty printing, you write multi-line JSON to *stdout* by default. When log aggregation is used, log shipper components require immediate output to instead be bare JSON, on a single line. To enable log aggregation from a development computer, output logs to local log files in addition to *stdout*. You also need to learn how to write log files if you aggregate more than one type of log data.
+When using pretty printing, you write multi-line JSON to *stdout* by default. When log aggregation is used, log shipper components require immediate output to instead be bare JSON, on a single line. To enable log aggregation from a development computer, output logs to local log files in addition to *stdout*.
 
 ![bare logs](../images/280/bare-logs.jpg)
 
