--- a/public/posts/ios-code-sample-overview.mdx
+++ b/public/posts/ios-code-sample-overview.mdx
@@ -138,7 +138,7 @@ The app also implements <a href='logout.mdx'>Open ID Connect RP-Initiated Logout
     <img src='../images/540/aswebauthenticationsession-start.jpg?v=20240914' alt='logout prompt' />
 </div>
 
-The best way to resolve this annoyance is to avoid the logout redirect and instead simply remoev tokens. Then, use the *prompt=login* OpenID Connect request parameter on the next login.
+The best way to resolve this annoyance is to avoid the logout redirect and instead simply remove tokens. Then, use the *prompt=login* OpenID Connect request parameter on the next login.
 
 ### Deep Linking
 
