--- a/public/posts/api-journey-server-side.mdx
+++ b/public/posts/api-journey-server-side.mdx
@@ -244,6 +244,7 @@ I design API request logs to be easy for people to query. When there is a client
 
 ```json
 {
+  "type": "request",
   "id": "7af62b06-8c04-41b0-c428-de332436d52a",
   "utcTime": "2022-07-24T10:27:33.468Z",
   "apiName": "FinalApi",
@@ -273,6 +274,7 @@ When there is a server error I write a log entry that includes a unique *Error I
 
 ```json
 {
+  "type": "request",
   "id": "b36701c9-ddf2-d7da-df48-4dfcc918009b",
   "utcTime": "2022-07-24T10:28:00.435Z",
   "apiName": "FinalApi",
